--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,1 +1,4 @@
-$beige: beige
+$beige: rgb(221, 198, 169);
+$sharkTankBlue: rgb(15, 144, 230);
+$graveyardGreen: rgb(64, 167, 64);
+$gravestoneGrey: rgb(148, 160, 156)
